--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 TweetRelated/.ipynb_checkpoints/Important_User_Analysis-checkpoint.ipynb
 TweetRelated/.DS_Store
 .DS_Store
+.DS_Store
+TweetRelated/NewTweetInfo.csv
