Prediction over the Symptoms, Age, Sex and relation with Wuhan based on the previous confirmed cases
The dataset is not big enough ,which may leeds some error. Since most of the datas in the groups are missing age, sex or whether live in Wuhan.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ TweetRelated/NewTweetInfo.csv
 TweetRelated/.ipynb_checkpoints/FetchAllIds-checkpoint.ipynb
 TweetRelated/.ipynb_checkpoints/FetchTweetData-checkpoint.ipynb
 TweetRelated/.ipynb_checkpoints/FetchAllIds-checkpoint.ipynb
+.DS_Store
+PredictionModel/.ipynb_checkpoints/PredictBasedOnConfirmedCase-checkpoint.ipynb
